--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,7 +13,6 @@ add_executable(Project1_Starter_Code
         ColonDashAutomaton.h
         Lexer.cpp
         Lexer.h
-        main.cpp
         Token.cpp
         Token.h
         CommaAutomaton.h
@@ -31,4 +30,39 @@ add_executable(Project1_Starter_Code
         AddAutomaton.h
         AddAutomaton.cpp
         EOF_TypeAutomaton.h
-        EOF_TypeAutomaton.cpp FactsAutomaton.h FactsAutomaton.cpp SchemesAutomaton.h SchemesAutomaton.cpp RulesAutomaton.h RulesAutomaton.cpp QueriesAutomaton.h QueriesAutomaton.cpp IDAutomaton.h IDAutomaton.cpp StringAutomaton.h StringAutomaton.cpp CommentAutomaton.h CommentAutomaton.cpp Parser.h Parser.cpp DatalogProgram.h DatalogProgram.cpp Predicate.h Predicate.cpp Rule.h Rule.cpp Parameter.h Parameter.cpp)
+        EOF_TypeAutomaton.cpp
+        FactsAutomaton.h
+        FactsAutomaton.cpp
+        SchemesAutomaton.h
+        SchemesAutomaton.cpp
+        RulesAutomaton.h
+        RulesAutomaton.cpp
+        QueriesAutomaton.h
+        QueriesAutomaton.cpp
+        IDAutomaton.h
+        IDAutomaton.cpp
+        StringAutomaton.h
+        StringAutomaton.cpp
+        CommentAutomaton.h
+        CommentAutomaton.cpp
+        Parser.h Parser.cpp
+        DatalogProgram.h
+        DatalogProgram.cpp
+        Predicate.h
+        Predicate.cpp
+        Rule.h Rule.cpp
+        Parameter.h
+        Parameter.cpp
+        Database.cpp
+        Database.h
+        Relation.cpp
+        Relation.h
+        Header.cpp
+        Header.h
+        Tuple.cpp
+        Tuple.h
+        Interpreter.h
+        Interpreter.cpp
+        main.cpp
+        Relacion.h
+        Relacion.cpp)
